css/hero.css
.hero-logo {
  width: 16rem;
}

#home {
  height: 100vh;
  display: grid;
  place-content: center;
}

#home > div {
  padding: 1em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: max-content;
  margin-left: auto;
  margin-right: auto;
  padding: 3rem 4rem 2rem 4rem;
  margin: 1rem;
}

#home h1 {
  font-weight: bold;
  margin: 0.5rem 0;
}

#home h2 {
  font-size: 1.5rem;
}

#application-div {
  background-color: var(--dark-color);
  text-decoration: none;
  padding: 0.6em 1.5em;
  color: white;
  border-radius: 1rem;
  font-weight: 700;
  display: inline-block;
  text-align: center;
}
#application-div:hover {
  background-color: var(--dark-color) !important;
  color: white !important;
}
@keyframes appexpand {
  from {
    width: 131.41px;
    max-width: 50%;
  }
  to {
    width: 100%;
    max-width: 100%;
  }
}
@keyframes appshrink{
  from{
    width: 100%;
    max-width: 100%;
  }
  to{
    width: 131.41px;
    max-width: 50%;
  }
}
@keyframes appfadeout {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
#application-overlay {
  height: 100%;
}
#application-links {
  display: none;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  opacity: 0;
}
@keyframes appfadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
#application-links a {
  cursor: pointer;
  text-decoration: none;
  color: unset;
  width: 33.3333%;
  height: 100%;
  background-color: var(--dark-color);
  color: #fff;
  padding: 0.6em 1.5em;
  transition: color 0.3s, background-color 0.3s;
}
@media screen and (max-width: 768px) {
  #application-links a,
  #application-overlay > p {
    font-size: 0.8rem;
  }
}
#application-links a:hover {
  background-color: #fff !important;
  color: var(--dark-color) !important;
}
#application-links a:first-child {
  border-top-left-radius: 1rem;
  border-bottom-left-radius: 1rem;
}
#application-links a:last-child {
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
}
#application-links a:nth-child(2) {
  border-left: 1px solid #fff;
  border-right: 1px solid #fff;
}

.btn:hover {
  background-color: var(--bg-colour) !important;
  color: var(--dark-color) !important;
}

.countdown-border {
  border: solid;
  /* border-color: white; */
  color: #434667;
  border-radius: 1rem;
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 1rem;
  padding: 0.2rem 0.2rem 0.8rem 0.2rem;
}
.hero-date {
  font-size: 2rem;
  font-weight: 700;
  color: #434667;
}

.countdown {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.countdown .day,
.countdown .hour,
.countdown .min,
.countdown .sec {
  color: #434667;
  /* text-shadow: 2px 2px gray; */
  padding: 10px;
  text-align: center;
}
.countdown .day .num,
.countdown .hour .num,
.countdown .min .num,
.countdown .sec .num {
  display: block;
  font-size: 40px;
}
.countdown .day .word,
.countdown .hour .word,
.countdown .min .word,
.countdown .sec .word {
  display: block;
  font-size: 20px;
}
/* @media screen and (min-width: 375px) { */
.btn {
  max-width: 50%;
}
.hero-logo {
  width: 13rem;
}
#home h1 {
  font-size: 2rem;
}
.hero-date {
  font-size: 1.5rem;
}
.countdown .day .num,
.countdown .hour .num,
.countdown .min .num,
.countdown .sec .num {
  display: block;
  font-size: 30px;
}
.countdown .day .word,
.countdown .hour .word,
.countdown .min .word,
.countdown .sec .word {
  display: block;
  font-size: 15px;
}
/* } */
@media only screen and (min-width: 768px) {
  .hero-logo {
    width: 15rem;
  }
  #home h1 {
    font-size: 3rem;
  }
  .hero-date {
    font-size: 1.5rem;
  }
  .countdown .day .num,
  .countdown .hour .num,
  .countdown .min .num,
  .countdown .sec .num {
    display: block;
    font-size: 35px;
  }
  .countdown .day .word,
  .countdown .hour .word,
  .countdown .min .word,
  .countdown .sec .word {
    display: block;
    font-size: 20px;
  }
}

